Fixed html issue

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
 		</main>
 		<footer>
-			<a href="./article1.html"><button class="maket">
-				 Maket1</button></a>
-			<a href="./article2.html"><button class="maket">
-					Maket2</button></a>
+			<button class="maket"><a href="./article1.html">
+				 Maket1</a></button>
+			<button class="maket"><a href="./article2.html">
+					Maket2</a></button>
 		</footer>
 	</div>
 </body>
