fixed html errors

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
 		</main>
 		<footer>
-			<button class="maket"><a href="./article1.html">
-				 Maket1</a></button>
-			<button class="maket"><a href="./article2.html">
-					Maket2</a></button>
+			<a class="maket" href="./article1.html">
+				 Maket1</a>
+			<a class="maket" href="./article2.html">
+					Maket2</a>
 		</footer>
 	</div>
 </body>
