fixed font issue

--- a/article1.html
+++ b/article1.html
@@ -9,7 +9,7 @@
 </head>
 <body class=article1>
 	<div class="wrapper">
-		<h1 class="article1">
+		<h1 class="h1-article1">
 			HR statistics: job search,  interviews, hiring and recruiting
 		</h1>
 		<div class="labels">
